k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier
  labels:
    project: three-tier-devops
