k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:

  name: backend-deployment

  namespace: three-tier

  labels:

    app: backend


spec:


  replicas: 2


  strategy:

    type: RollingUpdate

    rollingUpdate:

      maxSurge: 1

      maxUnavailable: 0



  selector:


    matchLabels:

      app: backend



  template:


    metadata:


      labels:


        app: backend



    spec:


      containers:


      - name: backend


        image: thesanketpawar/three-tier-backend:latest



        ports:


        - containerPort: 5000



        resources:



          requests:


            cpu: "200m"

            memory: "256Mi"



          limits:


            cpu: "500m"

            memory: "512Mi"





        # Application alive check

        livenessProbe:


          httpGet:


            path: /health

            port: 5000



          initialDelaySeconds: 60


          periodSeconds: 20


          timeoutSeconds: 5


          failureThreshold: 5






        # Traffic receive check

        readinessProbe:


          httpGet:


            path: /ready

            port: 5000



          initialDelaySeconds: 30


          periodSeconds: 10


          timeoutSeconds: 5


          failureThreshold: 5
