k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: three-tier
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None   # Headless service - standard practice for a single stateful DB pod
